# QGDW12184Tool

./: AppApp.cpp  AppApp.h  AppMain.cpp  AppMain.h  CMakeLists.txt  GUIDialog.cpp  GUIDialog.fbp  GUIDialog.h  ReadMe.md  icon.xpm
components/DeployWin/: CMakeLists.txt
components/DeployWin/DeployWin/: CMakeLists.txt  ReadMe.md  deploywin.cmake.in
components/DeployWin/DeployWin/src/: CMakeLists.txt  DeployWin.cpp  DeployWin.h
components/DeployWin/DeployWin/src/dummy/: DeployWin.cpp
components/DeployWin/DeployWin/test/: CMakeLists.txt  main.cpp
components/QGDW12184/: CMakeLists.txt  qgdw12184_crc.c  qgdw12184_crc.h  qgdw12184_fragment.c  qgdw12184_fragment.h  qgdw12184_frame.c  qgdw12184_frame.h  qgdw12184_sysapi.c  qgdw12184_sysapi.h
components/wxrc/: CMakeLists.txt
unix/: QGDW12184Tool.desktop
win32/: window_resources.rc
win32/nsis/: LICENSE.txt  README.txt  WELCOME.txt
